--- a/src/main/resources/templates/board/search.html
+++ b/src/main/resources/templates/board/search.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h2> 검색결과 출력 페이지 </h2>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<body class="container">
+
+
+
+<h2>회원제 게시판</h2>
+
+
 <table class="table table-hover">
     <thead>
     <tr>
@@ -22,5 +25,64 @@
     </tr>
     </tbody>
 </table>
+
+
+<!--
+        브라우저 주소창에 보이는 주소값 : /board?page=1
+        /board
+        /board/* => board/(page=1)
+        html에서 타임리프로 작성하는 주소값: /board(page=1)
+-->
+<div class="container">
+    <ul class="pagination">
+        <li class="page-item">
+            <!-- 첫 페이지로 가는 링크 -->
+            <a class="page-link" th:href="@{/board/search(page=1,select=${select},keyword=${keyword})}">
+                <span>First</span>
+            </a>
+        </li>
+
+        <li th:class="${boardList.first} ? 'disabled'" class="page-item">
+            <!-- boardList.first: isFirst()
+            boardList.number : get.Number()
+            get.Number() : 요청한 페이지 -->
+            <!-- 첫번째 페이지에는 링크 #을 준다(그대로 머무른다) -->
+            <a class="page-link" th:href="${boardList.first} ? '#' : @{/board/search(page=${boardList.number},select=${select},keyword=${keyword})}">
+                <span>&lt;</span>
+            </a>
+        </li>
+        <!-- startPage ~ endPage 까지 숫자를 만들어주는 역할
+         ${#numbers.sequence()}에 시작값과 끝값만 설정해주면 된다.
+         -->
+
+        <li th:each="page: ${#numbers.sequence(startPage, endPage)}"
+            th:class="${page == boardList.number + 1} ? 'active'" class="page-item">
+            <a class="page-link" th:text="${page}" th:href="@{/board/search(page=${page},select=${select},keyword=${keyword})}"></a>
+        </li>
+
+        <!-- 다음 페이지 요청
+                현재 3페이지를 보고있다면 다음 페이지는 4 페이지로 요청한다.
+                getNumber() 값은 2다.
+                따라서 4 페이지를 보고싶다면 getNumber()+2를 해야 컨트롤러에 4를 요청할 수 있다. -->
+
+        <li th:class="${boardList.last} ? 'disabled'">
+            <a class="page-link" th:href="${boardList.last} ? '#' : @{/board/search(page=${boardList.number + 2}, select=${select},keyword=${keyword})}">
+                <span>&gt;</span>
+            </a>
+        </li>
+
+        <li class="page-item">
+            <a class="page-link" th:href="@{/board/search(page=${boardList.totalPages},select=${select},keyword=${keyword})}">
+                <span>Last</span>
+            </a>
+        </li>
+    </ul>
+</div>
+
+<a th:href="@{|/member/myPage/${session.LoginId}|}">마이페이지</a>
+<a href="/board/save">글쓰기</a>
+
+<a th:if="${session.loginEmail.equals('shim')}" href="/member/admin">관리자용 페이지</a>
+
 </body>
 </html>
